finished two parts need to get pictures

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="banner-content col-lg-8 col-md-12">
 					<h1 class="wow fadeIn" data-wow-duration="4s">Intro to AI Course</h1>
 					<p class="text-white">
-						Open Sourced Materials for the Intro to AI Course.
+						A free Intro to AI Course for complete beginners
 					</p>
 				</div>
 			</div>
@@ -87,16 +87,19 @@
 				</div>
 				<div class="offset-lg-1 col-lg-6 offset-md-0 col-md-12 about-right">
 					<h1>
-						Over 2500 Courses <br> from 5 Platform
+						Many Lessons on <br> a Variety of AI Topics
 					</h1>
 					<div class="wow fadeIn" data-wow-duration="1s">
 						<p>
-							There is a moment in the life of any aspiring astronomer that it is time to buy that first telescope. It’s exciting to think
-							about setting up your own viewing station. In the life of any aspiring astronomer that it is time to buy that first
-							telescope. It’s exciting to think about setting up your own viewing station.
+							Our course begins by covering the basics of AI and Machine Learning, and has lots of code and 
+							notebook examples. The course covers standard machine learning algorithms and progresses to 
+							building full-scale deep neural networks. By the end of the course, you will be able to build 
+							your own machine learning algorithms and deep neural networks and complete many different types of 
+							projects. At the end of the course, we have a variety of to explore, ranging from topics of 
+							image classification, time series analysis, and natural langauge processing.
 						</p>
 					</div>
-					<a href="courses.html" class="primary-btn">Explore Courses</a>
+					<a href="lessons.html" class="primary-btn">View Lessons</a>
 				</div>
 			</div>
 		</div>
@@ -110,13 +113,13 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 about-right">
 					<h1>
-						This is Why <br> We have Solid Idea
+						Interactive Notebooks for <br> Learning Through Practice
 					</h1>
 					<div class="wow fadeIn" data-wow-duration="1s">
 						<p>
-							There is a moment in the life of any aspiring astronomer that it is time to buy that first telescope. It’s exciting to think
-							about setting up your own viewing station. In the life of any aspiring astronomer that it is time to buy that first
-							telescope. It’s exciting to think about setting up your own viewing station.
+							Our course is more than just lectures. We focus on learning through walkthroughs and projects above all.
+							Learning AI is more than just knowing concepts and theory, students must also learn how to implement those
+							concepts in code, so we make it the core of our curriculum.
 						</p>
 					</div>
 					<a href="courses.html" class="primary-btn white">Explore Courses</a>
