--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-center">
 				<div class="col-lg-5 col-md-6 about-left">
-					<img class="img-fluid" src="img/about.jpg" alt="">
+					<img class="img-fluid" src="img/learningai.jpeg" alt="">
 				</div>
 				<div class="offset-lg-1 col-lg-6 offset-md-0 col-md-12 about-right">
 					<h1>
@@ -122,7 +122,7 @@
 							concepts in code, so we make it the core of our curriculum.
 						</p>
 					</div>
-					<a href="courses.html" class="primary-btn white">Explore Courses</a>
+					<a href="lessons.html" class="primary-btn white">View Projects</a>
 				</div>
 				<div class="offset-lg-1 col-lg-6">
 					<div class="courses-right">
@@ -149,21 +149,6 @@
 											<i class="fa fa-book"></i> Language
 										</a>
 									</li>
-									<li>
-										<a class="wow fadeInLeft" href="courses.html" data-wow-duration="1s" data-wow-delay=".9s">
-											<i class="fa fa-book"></i> Life Science
-										</a>
-									</li>
-									<li>
-										<a class="wow fadeInLeft" href="courses.html" data-wow-duration="1s" data-wow-delay="1.1s">
-											<i class="fa fa-book"></i> Business
-										</a>
-									</li>
-									<li>
-										<a class="wow fadeInLeft" href="courses.html" data-wow-duration="1s" data-wow-delay="1.3s">
-											<i class="fa fa-book"></i> Socoal Science
-										</a>
-									</li>
 								</ul>
 							</div>
 							<div class="col-lg-6 col-md-6 col-sm-12">
@@ -186,21 +171,6 @@
 									<li>
 										<a class="wow fadeInRight" href="courses.html" data-wow-duration="1s" data-wow-delay=".7s">
 											<i class="fa fa-book"></i> Humanities
-										</a>
-									</li>
-									<li>
-										<a class="wow fadeInRight" href="courses.html" data-wow-duration="1s" data-wow-delay=".5s">
-											<i class="fa fa-book"></i> Marketing
-										</a>
-									</li>
-									<li>
-										<a class="wow fadeInRight" href="courses.html" data-wow-duration="1s" data-wow-delay=".3s">
-											<i class="fa fa-book"></i> Economics
-										</a>
-									</li>
-									<li>
-										<a class="wow fadeInRight" href="courses.html" data-wow-duration="1s" data-wow-delay=".1s">
-											<i class="fa fa-book"></i> Personal Dev
 										</a>
 									</li>
 								</ul>
