--- a/lessons.html
+++ b/lessons.html
@@ -91,10 +91,9 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<div class="section-title text-center">
-						<h1>Features That Make Us Hero</h1>
+						<h1>Lesson Videos</h1>
 						<p>
-							If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for
-							as low as $.17 each.
+							shawty a little baddie she my lil boo thang
 						</p>
 					</div>
 				</div>
