--- a/lessons.html
+++ b/lessons.html
@@ -48,9 +48,9 @@
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
-						<li class="menu-active"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="lessons.html">Lessons</a></li>
+						<li class="menu-active"><a href="lessons.html">Lessons</a></li>
 					</ul>
 				</nav><!-- #nav-menu-container -->
 			</div>
