--- a/lessons.html
+++ b/lessons.html
@@ -110,7 +110,12 @@
 						<br>
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
 							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
+								In this lesson, we go over a brief introduction to AI and ML as a whole, the course overview, and getting set up for the next few weeks of coding.
+								<br><br>
+								<a href="https://docs.google.com/presentation/d/1KBm104jjbzx_Gi9gJN_NclTDgygxyPQIRZlMA8botlE/edit">Link to Slides</a>
+								<br>
+								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials">Link to Github Repository with our Lesson Materials</a>
+								
 							</p>
 						</div>
 					</div>
