--- a/lessons.html
+++ b/lessons.html
@@ -129,7 +129,12 @@
 						<br>
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
 							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
+								In this lesson, we go over the fundamentals of machine learning theory and do a small machine learning project in Python to show how we execute these ideas in code. 
+								<br><br>
+								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/2_ConceptsML.ipynb">Theory Notebook</a>
+								<br>
+								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/1_LinearRegressionProject.ipynb">Coding Project Notebook</a>
+								
 							</p>
 						</div>
 
