--- a/lessons.html
+++ b/lessons.html
@@ -148,7 +148,10 @@
 						<h4>Lesson 3 - Deep Learning Theory and Concepts</h4>
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
 							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
+								In this lesson, we go over the fundamental concepts of deep learning, especially on how neural networks work. We discuss the theory behind these ideas and implement them in code for you to follow along with.
+								<br><br>
+								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/3_DeepLearning.ipynb">Deep Learning Notebook</a>
+								
 							</p>
 						</div>
 
