--- a/lessons.html
+++ b/lessons.html
@@ -166,7 +166,11 @@
 						<br>
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
 							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
+								In this lesson, we discover the theory behind Convolutional Neural Networks (CNNs), a very common type of neural network often used for image classification. We discuss their advantages compared to traditional neural networks and how we implement them in machine learning. 
+								<br><br>
+								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/4_CNNTheory.ipynb">CNN Theory Notebook</a>
+								<br>
+								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/7_CatDogCNN.ipynb">CNN Project Notebook</a>
 							</p>
 						</div>
 
