--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -190,10 +191,9 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<div class="section-title text-center">
-						<h1>Features That Make Us Hero</h1>
+						<h1>Links and Resources</h1>
 						<p>
-							If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for
-							as low as $.17 each.
+							These are useful links and resources for our course. Please star our Github repo and like our Youtube videos!
 						</p>
 					</div>
 				</div>
@@ -201,66 +201,33 @@
 			<div class="feature-inner row">
 				<div class="col-lg-4 col-md-6">
 					<div class="feature-item">
-						<i class="ti-crown"></i>
-						<h4>Architecture</h4>
+						<i class="fa fa-github"></i>
+						<h4><a href="https://github.com/Intro-Course-AI-ML/LessonMaterials">Github</a></h4>
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
 							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
+								Our Github has all the lesson notebooks, code, and projects for the entire course. <b>Please star the repo!</b>
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="feature-item">
-						<i class="ti-briefcase"></i>
-						<h4>Interior Design</h4>
+						<i class="fa fa-youtube	"></i>
+						<h4><a href="https://www.youtube.com/playlist?list=PLWj-3LXfs4r0pD_fzYXUa2PFJ5JHKwaaW">Video Lectures</a></h4>
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
 							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
+								Our Youtube Playlist has our 6 video lectures for our course. Watch them in order to follow the course.
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="feature-item">
-						<i class="ti-medall-alt"></i>
-						<h4>Concept Design</h4>
+						<i class="fa fa-medium"></i>
+						<h4><a href="https://medium.com/better-programming/how-to-teach-ai-and-ml-to-middle-schoolers-34bf59262ea8">Medium Article</a></h4>
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
 							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="feature-item">
-						<i class="ti-key"></i>
-						<h4>Lifetime Access</h4>
-						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
-							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="feature-item">
-						<i class="ti-files"></i>
-						<h4>Source File Included</h4>
-						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
-							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="feature-item">
-						<i class="ti-headphone-alt"></i>
-						<h4>Live Support</h4>
-						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
-							<p>
-								Lorem ipsum dolor sit amet consec tetur adipisicing elit, sed do eiusmod tempor incididunt labore.
+								This Medium article describes our teaching philosophy and the strategy we use to teach to younger students.
 							</p>
 						</div>
 					</div>
