--- a/lessons.html
+++ b/lessons.html
@@ -203,11 +203,11 @@
 						<h4>Lesson 6 - Natural Language Processing Theory and Examples</h4>
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
 							<p>
-								In this lesson, we discover the theory behind Convolutional Neural Networks (CNNs), a very common type of neural network often used for image classification. We discuss their advantages compared to traditional neural networks and how we implement them in machine learning. 
+								In this video, we go into how Natural Language Processing (NLP) works, which is responsible for applying machine learning to communication and human text (e.g. Siri, Google Search, etc). We talk about the theory behind NLP, followed up by a short coding project to classify emails as spam or not-spam
 								<br><br>
-								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/4_CNNTheory.ipynb">CNN Theory Notebook</a>
+								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/6_Intro_to_NLP.ipynb">NLP Theory Notebook</a>
 								<br>
-								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/7_CatDogCNN.ipynb">CNN Project Notebook</a>
+								<a href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/8_NLPModel.ipynb">NLP Project Notebook</a>
 							</p>
 						</div>
 
