--- a/lessons.html
+++ b/lessons.html
@@ -67,7 +67,7 @@
 					<h1 class="text-white">
 						Lessons
 					</h1>
-					<p>View our lessons in the free 8-week course here.</p>
+					<p>View our video lessons in the free course here.</p>
 					<div class="link-nav">
 						<span class="box">
 							<a href="index.html">Home </a>
@@ -93,8 +93,10 @@
 					<div class="section-title text-center">
 						<h1>Lesson Videos</h1>
 						<p>
-							shawty a little baddie she my lil boo thang
-						</p>
+							These are our videos for the course. If you enjoyed the videos, please like and comment!
+							<br>
+							<a href="https://youtube.com/playlist?list=PLWj-3LXfs4r0pD_fzYXUa2PFJ5JHKwaaW">Here is the link to the YouTube playlist containing all the videos.</a>
+							 </p>
 					</div>
 				</div>
 			</div>
