--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
 							<div class="col-lg-6 col-md-6 col-sm-12">
 								<ul class="courses-list">
 									<li>
-										<a class="wow fadeInLeft" href="courses.html" data-wow-duration="1s" data-wow-delay=".1s">
-											<i class="fa fa-book"></i> Development
+										<a class="wow fadeInLeft" href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/1_LinearRegressionProject.ipynb" data-wow-duration="1s" data-wow-delay=".1s">
+											<i class="fa fa-book"></i> Beginner Linear Regression
 										</a>
 									</li>
 									<li>
-										<a class="wow fadeInLeft" href="courses.html" data-wow-duration="1s" data-wow-delay=".3s">
-											<i class="fa fa-book"></i> IT & Software
+										<a class="wow fadeInLeft" href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/3_BasicModelPreProcessing.ipynb" data-wow-duration="1s" data-wow-delay=".3s">
+											<i class="fa fa-book"></i> Data Pre-processing
 										</a>
 									</li>
 									<li>
-										<a class="wow fadeInLeft" href="courses.html" data-wow-duration="1s" data-wow-delay=".5s">
-											<i class="fa fa-book"></i> Photography
+										<a class="wow fadeInLeft" href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/4_BasicModel.ipynb" data-wow-duration="1s" data-wow-delay=".5s">
+											<i class="fa fa-book"></i> Beginner Machine Learning Model
 										</a>
 									</li>
 									<li>
-										<a class="wow fadeInLeft" href="courses.html" data-wow-duration="1s" data-wow-delay=".7s">
-											<i class="fa fa-book"></i> Language
+										<a class="wow fadeInLeft" href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/5_ModelPractice2.ipynb" data-wow-duration="1s" data-wow-delay=".7s">
+											<i class="fa fa-book"></i> Advanced Machine Learning Model
 										</a>
 									</li>
 								</ul>
@@ -155,23 +155,23 @@
 							<div class="col-lg-6 col-md-6 col-sm-12">
 								<ul class="courses-list">
 									<li>
-										<a class="wow fadeInRight" href="courses.html" data-wow-duration="1s" data-wow-delay="1.3s">
-											<i class="fa fa-book"></i> Data Science
+										<a class="wow fadeInRight" href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/6_LinearRegressionProject2.ipynb" data-wow-duration="1s" data-wow-delay="1.3s">
+											<i class="fa fa-book"></i> Advanced Linear Regression
 										</a>
 									</li>
 									<li>
-										<a class="wow fadeInRight" href="courses.html" data-wow-duration="1s" data-wow-delay="1.1s">
-											<i class="fa fa-book"></i> Design
+										<a class="wow fadeInRight" href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/7_CatDogCNN.ipynb" data-wow-duration="1s" data-wow-delay="1.1s">
+											<i class="fa fa-book"></i> Cats and Dog CNN Classifier
 										</a>
 									</li>
 									<li>
-										<a class="wow fadeInRight" href="courses.html" data-wow-duration="1s" data-wow-delay=".9s">
-											<i class="fa fa-book"></i> Training
+										<a class="wow fadeInRight" href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/8_NLPModel.ipynb" data-wow-duration="1s" data-wow-delay=".9s">
+											<i class="fa fa-book"></i> Natural Language Processing Model
 										</a>
 									</li>
 									<li>
-										<a class="wow fadeInRight" href="courses.html" data-wow-duration="1s" data-wow-delay=".7s">
-											<i class="fa fa-book"></i> Humanities
+										<a class="wow fadeInRight" href="https://github.com/Intro-Course-AI-ML/LessonMaterials/blob/master/projects/9_MNIST.ipynb" data-wow-duration="1s" data-wow-delay=".7s">
+											<i class="fa fa-book"></i> MNIST Numerical Digit CNN Classifier
 										</a>
 									</li>
 								</ul>
