finished about page

--- a/index.html
+++ b/index.html
@@ -436,8 +436,16 @@
 					<h4>Quick Links</h4>
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Lessons</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="lessons.html">Lessons</a></li>
+					</ul>
+				</div>
+				<div class="col-lg-2 col-md-6 single-footer-widget">
+					<h4>Resources</h4>
+					<ul>
+						<li><a href="https://github.com/Intro-Course-AI-ML/LessonMaterials">Github</a></li>
+						<li><a href="https://www.youtube.com/playlist?list=PLWj-3LXfs4r0pD_fzYXUa2PFJ5JHKwaaW">Lectures</a></li>
+						<li><a href="https://medium.com/better-programming/how-to-teach-ai-and-ml-to-middle-schoolers-34bf59262ea8">Article</a></li>
 					</ul>
 				</div>
 			</div>
