--- a/about.html
+++ b/about.html
@@ -136,21 +136,50 @@
 	</section>
 	<!-- End Faculty Area -->
 
-
-	<section class="about-area section-gap">
+	<section class="feature-area">
 		<div class="container">
-			<div class="row align-items-center justify-content-center">
-				<div class="col-lg-5 col-md-6 about-left">
-					<img class="img-fluid" src="img/about.jpg" alt="">
-				</div>
-				<div class="offset-lg-1 col-lg-6 offset-md-0 col-md-12 about-right">
-					<h1>
-						Gallery
-					</h1>
-					<div class="wow fadeIn" data-wow-duration="1s">
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<div class="section-title text-center">
+						<h1>Gallery</h1>
 						<p>
 							Here are some pictures of us teaching to our local community as well as a guest invitation to the Sias International School in China.
 						</p>
+					</div>
+				</div>
+			</div>
+			<div class="feature-inner row">
+				<div class="col-lg-4 col-md-6">
+					<div class="feature-item">
+						<i class="fa fa-github"></i>
+						<h4><a href="https://github.com/Intro-Course-AI-ML/LessonMaterials">Github</a></h4>
+						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
+							<p>
+								Our Github has all the lesson notebooks, code, and projects for the entire course. <b>Please star the repo!</b>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="feature-item">
+						<i class="fa fa-youtube	"></i>
+						<h4><a href="https://www.youtube.com/playlist?list=PLWj-3LXfs4r0pD_fzYXUa2PFJ5JHKwaaW">Video Lectures</a></h4>
+						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
+							<p>
+								Our Youtube Playlist has our 6 video lectures for our course. Watch them in order to follow the course.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<div class="feature-item">
+						<i class="fa fa-medium"></i>
+						<h4><a href="https://medium.com/better-programming/how-to-teach-ai-and-ml-to-middle-schoolers-34bf59262ea8">Medium Article</a></h4>
+						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
+							<p>
+								This Medium article describes our teaching philosophy and the strategy we use to teach to younger students.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
