--- a/lessons.html
+++ b/lessons.html
@@ -5,7 +5,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/favicon.ico">
 	<!-- Author Meta -->
 	<meta name="author" content="codepixer">
 	<!-- Meta Description -->
@@ -49,8 +49,8 @@
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
 						<li class="menu-active"><a href="lessons.html">Lessons</a></li>
+						<li><a href="about.html">About</a></li>
 					</ul>
 				</nav><!-- #nav-menu-container -->
 			</div>
