updated team pics

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 			<div class="row justify-content-center d-flex align-items-center">
 				<div class="col-lg-3 col-md-6 col-sm-12 single-faculty">
 					<div class="thumb d-flex justify-content-center">
-						<img class="img-fluid" src="img/faculty/f1.jpg" alt="">
+						<img class="img-fluid" src="img/team/ayaan.jpg" alt="" width=80%>
 					</div>
 					<div class="meta-text text-center">
 						<h4>Ayaan Haque</h4>
@@ -119,14 +119,14 @@
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-12 single-faculty">
 					<div class="thumb d-flex justify-content-center">
-						<img class="img-fluid" src="img/faculty/f2.jpg" alt="">
+						<img class="img-fluid" src="img/team/varj.jpg" alt="" width=80%>
 					</div>
 					<div class="meta-text text-center">
 						<h4>Viraaj Reddi</h4>
 						<p class="designation">Co-instructor</p>
 						<div class="align-items-center justify-content-center d-flex">
 							<a href="https://github.com/viraajreddi"><i class="fa fa-github"></i></a>
-							<a href="#"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/viraaj-reddi-268889201/"><i class="fa fa-linkedin"></i></a>
 							<a href="mailto:viraajreddi@gmail.com"><i class="fa fa-google"></i></a>
 						</div>
 					</div>
