--- a/about.html
+++ b/about.html
@@ -182,7 +182,48 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="feature-inner row">
+					<div class="col-lg-4 col-md-6">
+						<div class="feature-item">
+							
+							<img src="gallery/2021_lesson1.png" alt="" title="" width=100% height=200px/>
+
+							<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
+								<p>
+									Our Github has all the lesson notebooks, code, and projects for the entire course. <b>Please star the repo!</b>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="feature-item">
+
+							<img src="gallery/sias_school.png" alt="" title="" width=100% height=200px/>
+							
+							<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
+								<p>
+									Our Youtube Playlist has our 6 video lectures for our course. Watch them in order to follow the course.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="feature-item">
+
+							<img src="gallery/sias_school2.png" alt="" title="" width=100% height=200px>
+
+							<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
+								<p>
+									This Medium article describes our teaching philosophy and the strategy we use to teach to younger students.
+								</p>
+							</div>
+						</div>
+					</div>
+
+
 			</div>
+			
 		</div>
 	</section>
 
